# bevy-jam-2

./: .gitignore  Cargo.toml  README.md  index.html  license.md
.github/workflows/: ci.yml  release.yml
assets/: items.ron
assets/atlases/: backpack.ron  backpack_flap.ron  cursor.ron  not_found.ron  record_player.ron
assets/audio/music/jazz/: placeholder_license.txt
assets/config/: loading.ron
assets/config/default/: audio.ron  config.audio.ron  config.sim.ron  data.blueprint.ron  data.enemies.ron  data.items.ron  data.layout.ron  data.recipes.ron  data.texts.ron  debug.ron  dungeon_layout.ron  dungeon_params.ron  dungeon_texts.ron  enemies.ron  grid.ron  health_bar.ron  items.ron  layout.ron  log.ron  recipes.ron  sim.ron
assets/config/dev/: .gitignore
scripts/: wasm.sh
src/: animation.rs  cleanup.rs  config_loading.rs  debug_window.rs  game.rs  game_ended.rs  gameover.rs  input.rs  main.rs  main_menu.rs  mainmenu.rs  mouse.rs  states.rs  transition_state.rs  window_event_handler.rs
src/audio/: audio.rs  mod.rs  play_audio.rs  play_sfx.rs  plugin.rs  record_player.rs  sound_event.rs
src/config/: config_audio.rs  config_craft_grid.rs  config_debug.rs  config_grid.rs  config_items.rs  config_log.rs  config_sim.rs  data_blueprint.rs  data_enemies.rs  data_items.rs  data_layout.rs  data_recipes.rs  data_sim_texts.rs  data_texts.rs  dungeon_layout.rs  dungeon_params.rs  dungeon_texts.rs  file_util.rs  file_utils.rs  health_bar.rs  mod.rs
src/game/: assets.rs  backpack.rs  camera.rs  combining_items_system.rs  combining_system.rs  components.rs  create_grid_system.rs  create_items_system.rs  dragging.rs  dragging_items_system.rs  draw_grid_system.rs  dungeonsim.rs  health_bar_system.rs  item_info_system.rs  item_spawner.rs  items.rs  mod.rs  player.rs  recipes.rs  spawn_grid.rs  spawn_inventory.rs  spawn_item_system.rs  state.rs  timed_effect.rs
src/game/dungeonsim/: combat.rs  dungeon.rs  dungeon_components.rs  event_handling.rs
src/game/init/: create_backpack.rs  create_widget_feed.rs  create_widget_grids.rs  create_widget_hero.rs  create_widget_music.rs  create_widget_toasts.rs  mod.rs
src/game/sim/: combat.rs  dungeon.rs  dungeon_components.rs  dungeon_gen.rs  dungeon_sim.rs  event_handling.rs  feed.rs  mod.rs
src/grid/: coords.rs  dimens.rs  mod.rs  pos.rs  tiles.rs
src/hud/: gold.rs  mod.rs
src/loading/: atlas_prefab.rs  config.rs  loading_instructions.rs  mod.rs  state.rs  systems.rs
src/positioning/: coordinates.rs  coords.rs  depth.rs  dimens.rs  dimensions.rs  grid.rs  mod.rs  position.rs
wasm/: bevy_game.js
wasm/assets/config/default/: config.debug.ron  config.sim.ron  data.enemies.ron  data.items.ron  data.texts.ron
