[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_asset_loader = "0.12.0"
bevy_egui = "0.15.1"
bevy-inspector-egui = "0.12.1"
bevy_ninepatch = "0.8.0"
bevy_rapier2d = { version = "0.16.0", features = ["debug-render", "serde-serialize", "simd-stable"] }
egui = "0.18.1"
serde = "1.0.143"
serde_json = "1.0.83"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3