[package]
name = "bevy-jam-2"
version = "0.1.0"
edition = "2021"
resolver = "2"
publish = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_egui = "0.15.1"
bevy-inspector-egui = "0.12.1"
bevy_ninepatch = "0.8.0"
bevy_kira_audio = { version = "0.12.0", features = ["ogg", "mp3"] }
egui = "0.18.1"
iyes_loopless = "0.7.*"
serde = { version = "1.0", features = ["derive"] }
rand = "*"
ron = "*"

[dependencies.bevy]
version = "0.8.*"
# We must disable default features because we're using bevy_kira_audio:
default-features = false
# Now we have to add all default features we want back in:
features = [
    "dynamic",
    # These are the default features:
    # (re-enable whichever you like)

    # Bevy functionality:
    #    "animation",          # Animation support
    #    "bevy_gilrs",         # Gamepad input support
    #    "bevy_audio",         # Builtin audio
    "bevy_winit", # Window management
    "x11", # Linux: Support X11 windowing system
    #    "filesystem_watcher", # Asset hot-reloading
    #    "render",             # Graphics Rendering

    ## "render" actually just includes:
    ## (feel free to use just a subset of these, instead of "render")
    "bevy_render", # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite", # 2D (sprites) rendering
    #    "bevy_pbr",           # 3D (physically-based) rendering
    #    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text", # Text/font rendering
    "bevy_ui", # UI toolkit

    # File formats:
    "png",
    #    "hdr",
    #    "vorbis",

    # These are other features that may be of interest:
    # (add any of these that you need)

    # Bevy functionality:
    "wayland", # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize", # Support for `serde` Serialize/Deserialize

    # File formats:
    #    "ktx2", # preferred format for GPU textures
    #    "dds",
    #    "jpeg",
    #    "bmp",
    #    "tga",
    #    "basis-universal",
    #    "zstd", # needed if using zstd in KTX2 files
    #    "flac",
    #    "mp3",
    #    "wav",

    # Development/Debug features:
    #    "dynamic",      # Dynamic linking for faster compile-times
    #    "trace",        # Enable tracing for performance measurement
    #    "trace_tracy",  # Tracing using `tracy`
    #    "trace_chrome", # Tracing using the Chrome format
    #    "wgpu_trace",   # WGPU/rendering tracing
]